src/styles/components/navigation/_footer.scss
.footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  margin: $l-size $xl-size;

  &__brand-group {
    display: flex;
    align-items: center;

    img {
      width: 4rem;
      height: 4rem;
      margin-right: 1rem;
    }

    p {
      font-size: 1.7rem;
      font-weight: 600;
      color: $color-dark;
    }

    @media only screen and (max-width: $bp-medium-small) {
      justify-content: center;
      margin-top: $l-size;
    }
  }

  &__contact-group {
    @include section-text($m-size, 1.2rem);
    color: $color-tertiary;

    span:nth-child(2n) {
      margin: 0 1.5rem;
    }
  }

  &__subscribe-newsletter {
    color: $color-dark;

    p {
      margin-bottom: $m-size;
      font-size: 1.4rem;
      font-weight: 600;
    }

    input {
      @include section-text($m-size, 1.2rem);
      width: 25rem;
      margin-top: 0;
      margin-bottom: 2px;
      color: $color-tertiary;
      border: none;
      outline: none;
      line-height: 5;

      &:focus::placeholder {
        opacity: 0;
      }

      @media only screen and (max-width: $bp-smallest) {
        width: 20rem;
      }
    }

    img {
      display: inline-block;
      width: 1.4rem;
      height: 1.4rem;
      margin-left: 1rem;
    }
  }

  &__input-group {
    display: flex;
    align-items: center;
    border-bottom: 0.5px solid $color-secondary;
  }

  @media only screen and (max-width: $bp-large) {
    margin: $l-size;
  }

  @media only screen and (max-width: $bp-medium-small) {
    flex-direction: column-reverse;
    text-align: center;
  }
}

